 * Added ScheduleMixin which introduces date variables like, start_date,
   due_date and duration to the mixed in class.
 * Removed some parts of the Project class which are now satisfied by the
   ScheduleMixin
 * Improved the implementation of the db.auth module
 * removed the db.__setup__ module which were helping to reference the
   variables in db module but it is not needed any more
 * It is now possible to initialise a Project object without a Repository, or
   an ImageFormat or a type
 * Updated the Tutorial
 * From now on, in a SimpleEntity, setting the code attribute to None or empty
   string will not raise any ValueErrors but will re-initialise the code value
   from the nice_name attribute.
 * Implemented stalker.core.models.sequence.Sequence class along with its tests

v0.1.1.a5:
 * removed the StatusedEntity and its tests, with the introduction of
   StatusMixin, it is not necessary any more
 * added camera_lens.py to the examples, which shows how to extend SOM in its
   very basic form, also added tests testing this example
 * changed the database uri for the DatabaseTester, it now uses an in memory
   SQLite database instead a file based one.
 * Updated the version numbers in the roadmap
 * Added last_login attribute to User class tables and mapped it
 * because it was taking too much space in the diffs the VUE file which shows
   the design sketches has been removed from the trunk
 * added the ValidatedList class which is a list derivative that accepts only
   one type of object.
 * these SOM classes listed below uses ValidetedList in their list attributes
   requiring specific types of objects to be assigned:
   * entity.Entity
   * status.StatusList
   * structure.Structure
   * types.AssetType
   * department.Department
   * user.User
   * mixin.ReferenceMixin
 * added tests of the Project class
 * completed the first implementation of the Project class
 * to be able to use assertIsInstance method of mocker.MockerTestCase all the